--- a/public/style.css
+++ b/public/style.css
@@ -350,3 +350,10 @@ label {
     background-color: #D9D9D9;
     border: none;
 }
+
+#calendar{
+    width:550px;
+    height: 400px;
+    font-family: 'Times New Roman', Times, serif;
+    color: purple;
+}
